--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RescueFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RescueFrame.form
@@ -153,6 +153,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Back"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBackActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
